--- a/_config.yml
+++ b/_config.yml
@@ -53,27 +53,20 @@ additional_links:
 about_profile_image: images/profile.jpg
 about_content: | # this will include new lines to allow paragraphs
   
-  I’m Juarez Junior, Senior Principal Java Developer Evangelist - Oracle. ☕️🥑
+My name is Juarez Barbosa Junior, and I have over 28 years of professional experience in Software Engineering and Developer Relations.
+
+I have held senior leadership roles in developer relations, developer ecosystem outreach, developer community management, business development and strategy, software and solutions engineering, collaboration with developer communities, startup founders, accelerators, incubators, mentors, venture capitalists, subject matter experts, and business partners.
+
+I am a Sr. Principal Java Developer Evangelist and Director of Developer Evangelism at Oracle. Previously, I was Azure Developer Relations Lead – Director of Developer Relations at Microsoft.
+Also a Principal Developer Advocate, Developer Advocacy Director at Oracle EMEA, and a Thought Leader and Technical Evangelist at IBM.
+     
+ I have extensive experience engaging the C-Level in technology and business transformation journeys, aiming at explaining complex business and technology-related scenarios to technical and non-technical audiences.
    
-  Previously, an Azure Developer Relations Lead at Microsoft, a Principal Developer Advocate - Blockchain at Oracle, and a Thought Leader and Technical Evangelist at IBM.
-   
-  I have over 28 years of professional experience in Software Engineering and Developer Relations, mainly as a Software Architect, Software Engineer, and Developer Advocate.
-   
-  I focus on developing new code samples, hands-on labs (Oracle LiveLabs), workshops, demos, content (blog posts, videos) highlighting developer tooling and various Java-related and Open-Source projects, and participation in technical conferences and meetups.
+From a technical standpoint, I am an expert in Java language, JDK, and JVMs (Java Virtual Machines). I have extensive experience and knowledge in Cloud Computing (Oracle OCI, Azure, GCP, IBM Cloud, and AWS), DevOps, Infrastructure as Code (IaC), Continuous Integration / Delivery (CI/CD), and Cloud Native. Also, I am a polyglot Software Engineer with experience in Java, Kotlin, Golang, Python, C, C++, and Javascript, and lately, I have been learning Rust.
   
-  I’m an expert in Java language, JDK, and JVMs (Java Virtual Machines). I have extensive experience and knowledge in Cloud Computing (Oracle OCI, Azure, GCP, IBM Cloud, and AWS), DevOps, Infrastructure as Code (IaC), Continuous Integration / Delivery (CI/CD), and Cloud Native. Besides, experience with Blockchain, including Hyperledger Fabric, Quorum and Ethereum, and Mobile Platforms.
-  
-  I’m a polyglot programmer with experience in Java, Kotlin, Golang, Python, C, C++, and Javascript, and lately, I’ve been learning Rust.
+I've also acted as a Mentor for Microsoft for Startups. IBM has nominated me as an IBM Technical Rock Star for Cloud, IBM Redbooks Thought Leader, Technical Evangelist for IBM Mobile, and Nokia Developer Champion. I have received many awards - IBM Manager Choice Award, Superior Community Service Contributions - Forum Nokia Wiki, IBM Hall of Fame Awards, IBM Common Development, Test Outstanding Contribution Awards, and IBM Mobile Enterprise Social Media Residency - Outstanding Contributor.
 
-  I have held senior leadership roles in developer relations, developer ecosystem outreach, developer community management, business development and strategy, software and solutions engineering, collaboration with developer communities, startup founders, accelerators, incubators, mentors, venture capitalists, subject matter experts, and business partners.
-  
-  Experience with developer relations and marketing programs, technical content creation and curation (articles and blog posts), implementation of code samples and technical guides, social media interactions, events organization, and promotion.
-
-  Experience in engaging the C-Level in technology and business transformation journeys. Business and technical acumen to explain complex business and technology-related scenarios to technical and non-technical audiences.
-
-  I've acted as a Mentor for Microsoft for Startups. IBM has nominated me as an IBM Technical Rock Star for Cloud, IBM Redbooks Thought Leader, Technical Evangelist for IBM Mobile, and Nokia Developer Champion. I have received many awards - IBM Manager Choice Award, Superior Community Service Contributions - Forum Nokia Wiki, IBM Hall of Fame Awards, IBM Common Development, Test Outstanding Contribution Awards, and IBM Mobile Enterprise Social Media Residency - Outstanding Contributor.
-
-  Feel free to invite me to speak about Java, Rust,  Microservices, Software Architecture, Solutions Architecture, Cloud Computing (Oracle Cloud, Azure, AWS, GCP, IBM Cloud), Emerging Technologies (IoT, AI, Blockchain, XR), and Cybersecurity.
+Feel free to invite me to speak about Java, Microservices, Software Architecture, Solutions Architecture, DevOps, Cloud Computing (Oracle Cloud, Azure, AWS, GCP, IBM Cloud), Emerging Technologies (IoT, AI, Blockchain, XR), and Cybersecurity.
 
 content:
     
