--- a/_config.yml
+++ b/_config.yml
@@ -56,7 +56,7 @@ about_content: | # this will include new lines to allow paragraphs
   My name is Juarez Barbosa Junior, and I have over 28 years of professional experience in Software Engineering and Developer Relations.
   I have held senior leadership roles in developer relations, developer ecosystem outreach, developer community management, business development and strategy, software and solutions engineering, collaboration with developer communities, startup founders, accelerators, incubators, mentors, venture capitalists, subject matter experts, and business partners.
   
-  I am a Sr. Principal Java Developer Evangelist and Director of Developer Evangelism at Oracle. Previously, I was Azure Developer Relations Lead – Director of Developer Relations at Microsoft.
+  I am a Sr. Principal Java Developer Evangelist and Director of Developer Evangelism at Oracle. Previously, I was an Azure Developer Relations Lead – Director of Developer Relations at Microsoft.
   Also a Principal Developer Advocate, Developer Advocacy Director at Oracle EMEA, and a Thought Leader and Technical Evangelist at IBM.
      
   I have experience engaging the C-Level in technology and business transformation journeys, aiming at explaining complex business and technology-related scenarios to technical and non-technical audiences.
