--- a/_config.yml
+++ b/_config.yml
@@ -446,7 +446,8 @@ content:
         quote: >
           https://www.oracle.com/
         description: | # this will include new lines to allow paragraphs
-            I'm currently playing a role as a Sr. Principal Java Developer Evangelist at Oracle. I focus on developing new code samples, hands-on labs (Oracle LiveLabs), workshops, demos, content (blog posts, videos) highlighting developer tooling and various Java-related and Open-Source projects, and participation in technical conferences and meetups.  
+            I am playing a leadership role responsible for developer evangelism execution at a global level. I'm responsible for strategy and developer outreach activities comprising developers (communities, meetups, JUGs - Java User Groups, 3rd-party conferences), social media strategy related to technical content and technology conferences, and customer-focused engagements from a technical standpoint. 
+            Besides, the developer evangelism motions also comprise developing new code samples, hands-on labs (Oracle LiveLabs - tech workshops), customer-facing demos, content creation (blog posts, videos) highlighting developer tooling and various Java-related and Open-Source projects.
 
   - title: 
     layout: list # Type of content section (list/text)
