--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ version: 2
 
 # Personal info
 name: Juarez Barbosa Junior, MSc
-title: Senior Principal Java Developer Evangelist - Oracle. ☕️🥑
+title: Software Engineering, Solutions Architecture, Developer Relations
 email: juarez.barbosa@gmail.com
 website: https://juarezjuniorgithub.github.io/
 
