--- a/_config.yml
+++ b/_config.yml
@@ -491,7 +491,7 @@ content:
         quote: >
           https://developer.oracle.com/
         description: | # this will include new lines to allow paragraphs            
-            I acted as Manager responsible for their strategy and developer advocacy programs and activities in EMEA, with a focus on Blockchain and Java technologies. Acted as a leader concerning all the business development activities, customer and C-Level engagements, presentations at technical conferences, webinars and hackathons.
+            I acted as Manager responsible for their strategy and developer advocacy programs and activities in EMEA, with a focus on Blockchain and Java technologies. Acted as a leader concerning all the business development activities, customer and C-Level engagements, and presentations at technical conferences, webinars and hackathons.
   - title: 
     layout: list # Type of content section (list/text)
     content:
