--- a/_config.yml
+++ b/_config.yml
@@ -340,8 +340,8 @@ content:
       - [TDC Innovation 2023 - Brazil - Revolutionize Java Database App Development with Reactive Streams and Java Virtual Threads](https://thedevconf.com/tdc/2023/connections/trilha-arquitetura-java)
       - [TDC Innovation 2023 - Brazil - Uma solução de ingestão de dados de alta velocidade em Java usando MQTT, AMQP e STOMP - pt-BR](https://thedevconf.com/tdc/2023/connections/trilha-microservices-ii)
       - [TDC Innovation 2023 - Brazil - What I learned from working for Big Tech companies](https://thedevconf.com/tdc/2023/connections/trilha-carreira-e-mentoria)
-      - [Cloudland 2023 - Germany - Revolutionize Java DB App Dev with Reactive Streams and Java Virtual Threads](https://en.shop.doag.org/events/cloudland/2023/agenda/#eventDay.all)
-      - [Cloudland 2023 - Germany - A High-Speed Data Ingestion Solution in Java Using MQTT, AMQP, and STOMP](https://en.shop.doag.org/events/cloudland/2023/agenda/#eventDay.all)
+      - [CloudLand 2023 - Germany - Revolutionize Java DB App Dev with Reactive Streams and Java Virtual Threads](https://en.shop.doag.org/events/cloudland/2023/agenda/#eventDay.all)
+      - [CloudLand 2023 - Germany - A High-Speed Data Ingestion Solution in Java Using MQTT, AMQP, and STOMP](https://en.shop.doag.org/events/cloudland/2023/agenda/#eventDay.all)
       - [Azure User Group Sweden - Multi-cloud Application Development with Microsoft Azure and Oracle Cloud Infrastructure](https://twitter.com/AzugSweden/status/1632360722284806148)
       - [Global Azure 2023 - Multi-cloud App Dev for Java Developers with Microsoft Azure and Oracle Cloud Infrastructure](https://globalazure.net/sessions/481687)
       - [SPOUG Academy - Revolutionize Java Database App Development with Reactive Streams and Virtual Threads](https://community.spoug.es/events/revolutionize-java-database-app-development-with-reactive-streams-and-virtual-threads)
