--- a/_config.yml
+++ b/_config.yml
@@ -458,7 +458,6 @@ content:
         description: | # this will include new lines to allow paragraphs
             I am playing a leadership role responsible for developer evangelism execution at a global level. I'm responsible for strategy and developer outreach activities comprising developers (communities, meetups, JUGs - Java User Groups, 3rd-party conferences), social media strategy related to technical content and technology conferences, and customer-focused engagements from a technical standpoint. 
             Besides, the developer evangelism motions also comprise developing new code samples, hands-on labs (Oracle LiveLabs - tech workshops), customer-facing demos, content creation (blog posts, videos) highlighting developer tooling and various Java-related and Open-Source projects.
-            
 
   - title: 
     layout: list # Type of content section (list/text)
@@ -673,7 +672,7 @@ content:
         description: | # this will include new lines to allow paragraphs           
             I acted as a Software and Automation Systems Developer to support the implementation of several industrial automation systems. The solutions comprised some SCADA (Supervisory Control and Data Acquisition) systems, PLCs (Programmable Logic Controllers), the C and C++ programming languages, and Microsoft Visual C++. 
 
-  - title: 
+  - title: Education - Academic Qualifications # Title for the section
     layout: list # Type of content section (list/text)
     content:
       - layout: left
