--- a/_config.yml
+++ b/_config.yml
@@ -681,7 +681,7 @@ content:
         title: Atlantic Technological University
         link: atu.ie     
         caption: 2021
-        sub_title: MSc Computing in DevOps
+        sub_title: MSc Computing in DevOps - Grade: Award Classification - First Class Honours
 
   - title: 
     layout: list # Type of content section (list/text)
@@ -690,7 +690,7 @@ content:
         title: National College of Ireland
         link: ncirl.ie
         caption: 2021
-        sub_title: HD in Science in Computing - Cybersecurity
+        sub_title: HD in Science in Computing - Cybersecurity - Grade: Award Classification - First Class Honours
 
   - title: 
     layout: list # Type of content section (list/text)
