--- a/_config.yml
+++ b/_config.yml
@@ -254,6 +254,7 @@ content:
       - [Helidon 2 CLI](https://juarezjunior.medium.com/helidon-2-cli-b87af57e228e)
       - [Cloud Native apps with Helidon 2](https://juarezjunior.medium.com/cloud-native-apps-with-helidon-2-ee44b7f3437b)
       - [Getting started with Helidon 2](https://juarezjunior.medium.com/getting-started-with-helidon-2-1d0740d1586c)
+      - [Helidon + Oracle Autonomous Database (ADB) + React.js = Cloud Native Java Application](https://juarezjunior.medium.com/helidon-oracle-autonomous-database-adb-react-js-cloud-native-java-application-e1e9e1b33bf)
       - [Create a Hello World web app for Azure App Service using the Azure Toolkit for Eclipse](https://juarezjunior.medium.com/create-a-hello-world-web-app-for-azure-app-service-using-the-azure-toolkit-for-eclipse-f222333cbf78)
       - [Quick and easy Javascript testing with PlayWright](https://juarezjunior.medium.com/quick-and-easy-javascript-testing-with-playwright-8507e1407d60)
       - [Building your first static website with Azure Static Web Apps - GitHub](https://juarezjunior.medium.com/building-your-first-static-website-with-azure-static-web-apps-6337e363b571)
