--- a/_config.yml
+++ b/_config.yml
@@ -130,7 +130,9 @@ content:
       - [TDC Innovation 2023 - Brazil - What I learned from working for Big Tech companies](https://thedevconf.com/tdc/2023/connections/trilha-carreira-e-mentoria)
       - [CloudLand 2023 - Germany - Revolutionize Java DB App Dev with Reactive Streams and Java Virtual Threads](https://en.shop.doag.org/events/cloudland/2023/agenda/#eventDay.all)
       - [CloudLand 2023 - Germany - A High-Speed Data Ingestion Solution in Java Using MQTT, AMQP, and STOMP](https://en.shop.doag.org/events/cloudland/2023/agenda/#eventDay.all)
-      - [BarcelonaJUG - Open Source Data Infrastructure & Java Virtual Threads](https://www.meetup.com/barcelonajug/events/296641823/)
+      - [BarcelonaJUG - Spain - Open Source Data Infrastructure & Java Virtual Threads](https://www.meetup.com/barcelonajug/events/296641823/)
+      - [Cloud Conference Day 2023 - Brazil - A High-Speed Data Ingestion Solution in Java Using MQTT, AMQP, STOMP, and Virtual Threads](https://www.cloudconferenceday.com/opensexta)
+      - [DeveloperWeek Enterprise 2023 - USA - Introduction to Database Operators for Kubernetes](https://developerweekenterprise2023.sched.com/event/1T2iO/introduction-to-database-operators-for-kubernetes?iframe=no&w=100%&sidebar=yes&bg=no)
       - [SevillaJUG - Unleash the power of your applications with Micronaut and GraalVM](https://www.meetup.com/svqjug/events/296577647/)
       - [Azure User Group Sweden - Multi-cloud Application Development with Microsoft Azure and Oracle Cloud Infrastructure](https://twitter.com/AzugSweden/status/1632360722284806148)
       - [Global Azure 2023 - Multi-cloud App Dev for Java Developers with Microsoft Azure and Oracle Cloud Infrastructure](https://globalazure.net/sessions/481687)
@@ -237,6 +239,11 @@ content:
       - [A Java Microservice with GraalVM, Micronaut Data, JDK 21, and the Oracle Autonomous Database](https://juarezjunior.medium.com/a-java-microservice-with-graalvm-micronaut-data-jdk-21-and-the-oracle-autonomous-database-10f24759f807)
       - [A High-Speed Data Ingestion Microservice in Java Using MQTT, AMQP, and STOMP](https://juarezjunior.medium.com/a-high-speed-data-ingestion-microservice-in-java-using-mqtt-amqp-and-stomp-135724223ae1)
       - [How to send notifications from a Quarkus app to a Telegram Chatbot using Java and the Oracle Database 23c Free — Developer Release](https://medium.com/oracledevs/how-to-send-notifications-from-a-quarkus-app-to-a-telegram-chatbot-using-java-and-the-oracle-6fc6940ac8d5)
+      - [Developing an Oracle JDBC app with GraalVM Native Image](https://juarezjunior.medium.com/introduction-to-oracle-jdbc-driver-configuration-for-graalvm-native-image-6130e699d03b)
+      - [Getting Started with Reactive Relational Database Connectivity and the Oracle R2DBC Driver](https://juarezjunior.medium.com/getting-started-with-r2dbc-reactive-relational-database-connectivity-and-the-oracle-r2dbc-driver-2c50ab1d9e66)
+      - [Introduction to JDBC Reactive Extensions with the Oracle Database 23c Free — Developer Release](https://juarezjunior.medium.com/introduction-to-jdbc-reactive-extensions-with-the-oracle-database-23c-free-developer-release-b5a64ac5d194)
+      - [Java Persistence with Spring Boot 3, Spring Data JPA with Hibernate, and the Oracle Database 23c Free — Developer Release](https://juarezjunior.medium.com/java-persistence-with-spring-boot-3-spring-data-jpa-with-hibernate-and-the-oracle-database-23c-9c0946d4838f)
+      - [Oracle LiveLab Workshop - How to hook up Telegram Messenger with SpringBoot and the Autonomous Database](https://apexapps.oracle.com/pls/apex/r/dbpm/livelabs/run-workshop?p210_wid=3701)
       - [The new BOOLEAN data type in Oracle Database 23c with the Oracle JDBC drivers (23c, 21c) — JDBC type compatibility](https://medium.com/oracledevs/the-new-boolean-data-type-in-oracle-database-23c-with-the-oracle-jdbc-drivers-23c-21c-jdbc-f3252b200838)
       - [The new BOOLEAN data type in Oracle Database 23c with PL/SQL and the JDBC Drivers (21c, 23c)](https://juarezjunior.medium.com/the-new-boolean-data-type-in-oracle-database-23c-with-pl-sql-and-the-jdbc-drivers-21c-23c-c83957e7e21e)
       - [Oracle Database 23c Free — Developer Release for Java Developers with Docker on Windows](https://medium.com/oracledevs/oracle-database-23c-free-developer-release-for-java-developers-with-docker-on-windows-b164a7a61a91)
