--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ version: 2
 # Personal info
 name: Juarez Barbosa Junior, MSc
 title: Software Engineering, Solutions Architecture, Developer Relations
-email: juarez.barbosa@gmail.com
+email: juarez.junior@outlook.ie
 website: https://juarezjuniorgithub.github.io/
 
 # Dark Mode (true/false/never)
