--- a/_config.yml
+++ b/_config.yml
@@ -242,8 +242,6 @@ content:
       - [A High-Speed Data Ingestion Microservice in Java Using MQTT, AMQP, and STOMP](https://juarezjunior.medium.com/a-high-speed-data-ingestion-microservice-in-java-using-mqtt-amqp-and-stomp-135724223ae1)
       - [Java Persistence with Spring Boot 3, Spring Data JPA with Hibernate, and the Oracle Database 23c Free — Developer Release](https://juarezjunior.medium.com/java-persistence-with-spring-boot-3-spring-data-jpa-with-hibernate-and-the-oracle-database-23c-9c0946d4838f)
       - [Spring Data JDBC with the Oracle Database 23c for Java Developers — Getting Started Guide](https://juarezjunior.medium.com/spring-data-jdbc-with-the-oracle-database-23c-for-java-developers-getting-started-guide-1c4640fc8d27)
-      - [Performance Analysis of Infrastructure as Code (IaC) Tools — Part 2 — Terraform](https://juarezjunior.medium.com/performance-analysis-of-infrastructure-as-code-iac-tools-part-2-terraform-be3f46a86b37)
-      - [Performance Analysis of Infrastructure as Code (IaC) Tools — Part 1 — Bicep](https://juarezjunior.medium.com/performance-analysis-of-infrastructure-as-code-iac-tools-part-1-bicep-da70211e7347)
       - [The Reactive Streams Ingestion Library — DataLoad Mode](https://juarezjunior.medium.com/the-reactive-streams-ingestion-rsi-library-dataload-mode-8b181a3d4b11)
       - [A Guide to Migrating from HikariCP to Oracle UCP - Universal Connection Pool](https://juarezjunior.medium.com/a-guide-to-migrating-from-hikaricp-to-oracle-ucp-universal-connection-pool-e2f3fb6db2d5)      
       - [How to send notifications from a Quarkus app to a Telegram Chatbot using Java and the Oracle Database 23c Free — Developer Release](https://medium.com/oracledevs/how-to-send-notifications-from-a-quarkus-app-to-a-telegram-chatbot-using-java-and-the-oracle-6fc6940ac8d5)
@@ -316,6 +314,8 @@ content:
       - [JavaRanch Forum](https://coderanch.com/u/27811/Juarez-Alvares-Barbosa-Junior)
 
       DevOps, Cloud Native, Databases, AI
+      - [Performance Analysis of Infrastructure as Code (IaC) Tools — Part 2 — Terraform](https://juarezjunior.medium.com/performance-analysis-of-infrastructure-as-code-iac-tools-part-2-terraform-be3f46a86b37)
+      - [Performance Analysis of Infrastructure as Code (IaC) Tools — Part 1 — Bicep](https://juarezjunior.medium.com/performance-analysis-of-infrastructure-as-code-iac-tools-part-1-bicep-da70211e7347)
       - [Cloud Native Java with Kubernetes, Spring Boot, Docker, and Minikube](https://juarezjunior.medium.com/cloud-native-java-with-kubernetes-spring-boot-docker-and-minikube-8c997e38f2d)
       - [Oracle Database XE for Students and Developers on Windows 11](https://juarezjunior.medium.com/oracle-database-xe-for-students-and-developers-on-windows-11-9d91f6b06a89)
       - [Azure SQL Database Ledger — Overview](https://juarezjunior.medium.com/azure-sql-database-ledger-overview-4d36863fd958)
@@ -323,20 +323,20 @@ content:
       - [Are we about to fail the Turing Test?](https://medium.com/@curiocity30/are-we-about-to-fail-the-turing-test-cb646d5fc29c)
       - [Artificial Intelligence and Machine Learning with the Oracle Data Science Cloud](https://www.slideshare.net/juarezjunior/artificial-intelligence-and-machine-learning-with-the-oracle-data-science-cloud)
       - [Oracle NoSQL Database — How to run NoSQL Database Community Edition with a VirtualBox VM](https://juarezjunior.medium.com/oracle-nosql-database-how-to-run-nosql-database-community-edition-with-a-virtualbox-vm-1b31bc63fc7b)
-      - [Oracle Autonomous Data Warehouse Cloud Service (ADW), Part 1: How to provision an ADW database](https://juarezjunior.medium.com/oracle-autonomous-data-warehouse-cloud-service-adw-part-1-how-to-provision-an-adw-database-2225ecc854b)
-      - [Oracle Autonomous Data Warehouse Cloud Service (ADW), Part 2: Connect to the ADW database](https://juarezjunior.medium.com/oracle-autonomous-data-warehouse-cloud-service-adw-part-2-connect-to-the-adw-database-f2455c8e2ca4)
-      - [Oracle Autonomous Data Warehouse Cloud Service (ADW), Part 3: Getting Started with Oracle Machine Learning](https://juarezjunior.medium.com/oracle-autonomous-data-warehouse-cloud-service-adw-part-3-getting-started-with-oracle-machine-1b72224b4112)
-      - [Oracle Autonomous Data Warehouse Cloud Service (ADW), Part 4: Create a Project with Oracle Machine Learning](https://juarezjunior.medium.com/oracle-autonomous-data-warehouse-cloud-service-adw-part-4-create-a-project-with-oracle-machine-4cf8f45c1089)
-      - [Oracle Autonomous Data Warehouse Cloud Service (ADW), Part 5: Create Notebooks in Oracle Machine Learning](https://juarezjunior.medium.com/oracle-autonomous-data-warehouse-cloud-service-adw-part-5-create-notebooks-in-oracle-machine-3e423a791a7b)
-      - [Oracle Autonomous Data Warehouse Cloud Service (ADW), Part 6: Import Excel Data into Oracle Autonomous Database](https://juarezjunior.medium.com/oracle-autonomous-data-warehouse-cloud-service-adw-part-6-import-excel-data-into-oracle-b068d26de6cc)
-      - [Oracle Autonomous Data Warehouse Cloud Service (ADW), Part 7: Run Notebooks with Oracle Machine Learning](https://juarezjunior.medium.com/oracle-autonomous-data-warehouse-cloud-service-adw-part-7-run-notebooks-with-oracle-machine-64731155a436)
+      - [Oracle Autonomous Data Warehouse Cloud Service (ADW), Part 1 - How to provision an ADW database](https://juarezjunior.medium.com/oracle-autonomous-data-warehouse-cloud-service-adw-part-1-how-to-provision-an-adw-database-2225ecc854b)
+      - [Oracle Autonomous Data Warehouse Cloud Service (ADW), Part 2 - Connect to the ADW database](https://juarezjunior.medium.com/oracle-autonomous-data-warehouse-cloud-service-adw-part-2-connect-to-the-adw-database-f2455c8e2ca4)
+      - [Oracle Autonomous Data Warehouse Cloud Service (ADW), Part 3 - Getting Started with Oracle Machine Learning](https://juarezjunior.medium.com/oracle-autonomous-data-warehouse-cloud-service-adw-part-3-getting-started-with-oracle-machine-1b72224b4112)
+      - [Oracle Autonomous Data Warehouse Cloud Service (ADW), Part 4 - Create a Project with Oracle Machine Learning](https://juarezjunior.medium.com/oracle-autonomous-data-warehouse-cloud-service-adw-part-4-create-a-project-with-oracle-machine-4cf8f45c1089)
+      - [Oracle Autonomous Data Warehouse Cloud Service (ADW), Part 5 - Create Notebooks in Oracle Machine Learning](https://juarezjunior.medium.com/oracle-autonomous-data-warehouse-cloud-service-adw-part-5-create-notebooks-in-oracle-machine-3e423a791a7b)
+      - [Oracle Autonomous Data Warehouse Cloud Service (ADW), Part 6 - Import Excel Data into Oracle Autonomous Database](https://juarezjunior.medium.com/oracle-autonomous-data-warehouse-cloud-service-adw-part-6-import-excel-data-into-oracle-b068d26de6cc)
+      - [Oracle Autonomous Data Warehouse Cloud Service (ADW), Part 7 - Run Notebooks with Oracle Machine Learning](https://juarezjunior.medium.com/oracle-autonomous-data-warehouse-cloud-service-adw-part-7-run-notebooks-with-oracle-machine-64731155a436)
       - [GDPR — the new EU General Data Protection Regulation](https://juarezjunior.medium.com/gdpr-the-new-eu-general-data-protection-regulation-d651529435ac)
 
       Blockchain, Hyperledger, Quorum, CORDA, Ethereum, Solidity      
-      - [The Trinity in Exponential Technologies: Open Source, Blockchain and Microsoft Azure](https://www.slideshare.net/juarezjunior/the-trinity-in-exponential-technologies-open-source-blockchain-and-microsoft-azure)       
+      - [The Trinity in Exponential Technologies - Open Source, Blockchain and Microsoft Azure](https://www.slideshare.net/juarezjunior/the-trinity-in-exponential-technologies-open-source-blockchain-and-microsoft-azure)       
       - [Enterprise Blockchain Application Development using Azure Blockchain Service](https://www.slideshare.net/juarezjunior/enterprise-blockchain-application-development-using-azure-blockchain-service)    
       - [How to Integrate Blockchain Technology into Your Applications](https://www.slideshare.net/juarezjunior/how-to-integrate-blockchain-technology-into-your-applications)  
-      - [Workshop: Blockchain on Azure for Developers](https://www.slideshare.net/juarezjunior/workshop-blockchain-on-azure-for-developers)     
+      - [Workshop - Blockchain on Azure for Developers](https://www.slideshare.net/juarezjunior/workshop-blockchain-on-azure-for-developers)     
       - [Corda on Azure Blockchain](https://www.slideshare.net/juarezjunior/corda-on-azure-blockchain)      
       - [Cloud Lunch and Learn - Azure Blockchain for Developers](https://www.slideshare.net/juarezjunior/cloud-lunch-and-learn-azure-blockchain-for-developers)   
       - [Cloud Lunch and Learn - Hyperledger Blockchain on Azure](https://www.slideshare.net/juarezjunior/cloud-lunch-and-learn-hyperledger-blockchain-on-azure)  
